[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkcs7csr"
dynamic = ["version"]
description = "A Python module for creating Microsoft style \"PKCS #7 renewal requests\""
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Magnus Watn" },
]
keywords = [
    "ad",
    "adcs",
    "certificate",
    "certsrv",
    "csr",
    "iis",
    "pki",
    "renewal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "cryptography",
    "pyasn1",
    "pyasn1-modules",
]

[project.urls]
Homepage = "https://github.com/magnuswatn/pkcs7csr"

[tool.hatch.version]
path = "pkcs7csr.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pkcs7csr.py",
]

[tool.hatch.envs.default]
dependencies = ["pytest"]
